--- a/fundamentals/01_html/lesson_01_HTML_Introduction.html
+++ b/fundamentals/01_html/lesson_01_HTML_Introduction.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<!--suppress CheckEmptyScriptTag -->
 <html class="no-js" lang="en">
 <head>
   <!-- CHARACTER ENCODING & VIEWPORT FIRST -->
@@ -7,33 +8,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- PRIMARY METADATA -->
-  <title>HTML Introduction</title>
-  <meta name="description" content="An Introduction to HTML for Complete Beginners">
+  <title>HTML Basics</title>
+  <meta name="description" content="An Introduction to HTML Basics for Complete Beginners">
   <meta name="author" content="Wasula Benjamin">
 
   <!-- SEO AND INDEXING -->
   <meta name="robots" content="index, follow">
-  <meta name="keywords" content="web development basics, html, introduction">
+  <meta name="keywords" content="web development basics, html, introduction, basics">
 
   <!-- OPEN GRAPH/SOCIAL METADATA (SHOULD COME BEFORE ICONS)  -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://github.com/wasulabenjamin/web_basics">
-  <meta property="og:title" content="HTML Introduction">
-  <meta property="og:description" content="An Introduction to HTML for Complete Beginners">
+  <meta property="og:title" content="HTML Basics">
+  <meta property="og:description" content="An Introduction to HTML Basics for Complete Beginners">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social_media.png">
+    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social-media.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628">
-  <meta property="og:image:alt" content="HTML Introduction">
+  <meta property="og:image:alt" content="HTML Basics">
   <meta property="og:site_name" content="Wasula Benjamin">
 
   <!-- TWITTER CARD TAGS -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="HTML Introduction">
-  <meta name="twitter:description" content="Master HTML development with curated projects in html and html5">
+  <meta name="twitter:title" content="HTML Basics">
+  <meta name="twitter:description" content="Master HTML Basics with curated examples in html and html5">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social_media.png">
-  <meta name="twitter:image:alt" content="HTML Introduction Infographic">
+    content="https://raw.githubusercontent.com/wasulabenjamin/web_basics/main/assets/img/social-media.png">
+  <meta name="twitter:image:alt" content="HTML Basics Infographic">
   <meta name="twitter:site" content="@wasulabenjamin">
   <meta name="twitter:creator" content="@wasulabenjamin">
   <meta name="twitter:domain" content="github.com/wasulabenjamin/web_basics">
@@ -49,7 +50,7 @@
   <link rel="apple-touch-icon" href="../../icon.png">
 
   <!-- STYLESHEETS: LOCAL FIRST  -->
-  <link rel="stylesheet" href="../../assets/css/learn_html.css">
+  <link rel="stylesheet" href="../../assets/css/learn-html.css">
 </head>
 <body>
   <h1>HTML Introduction</h1>
@@ -208,7 +209,7 @@
 
       Boolean Attributes
       Boolean attributes represent true and false values and do not require any value with the attribute name.
-      To set the true value, you need to write the attribute's name, and to set it false, the attribute should be 
+      To set the true value, you need to write the attribute's name, and to set it false, the attribute should be
       omitted altogether.
       Boolean attributes include: disabled, readonly, required, inert, autocomplete
 
@@ -326,8 +327,8 @@
 
     Reason to Use Paragraphs:
     Paragraphs typically create space above and below the text, separating it from surrounding content.
-    They can be styled using CSS to control aspects such as font size, color, alignment, and spacing. 
-    In web development, paragraphs play a crucial role in conveying information effectively, enabling clear 
+    They can be styled using CSS to control aspects such as font size, color, alignment, and spacing.
+    In web development, paragraphs play a crucial role in conveying information effectively, enabling clear
     communication, and enhancing the overall user experience on a website.
 
     Line Breaks With Paragraphs
@@ -477,9 +478,9 @@
     Without formatting, nothing looks good or soothing to our eyes.
     But HTML formatting is not only for soothing the eye or making textual content attractive.
     There are few reasons to do the HTML formatting, this include:
-      - The appearance of any text provides a clear view of the content intent, such as highlighting the keywords, 
+      - The appearance of any text provides a clear view of the content intent, such as highlighting the keywords,
         putting meaningful information in the quotations, underlining the main sentence, etc.
-      - Formatting helps search engines understand the content structure and is also helpful 
+      - Formatting helps search engines understand the content structure and is also helpful
         for search engine optimization.
       - Formatting improves the visual layout and improves the readability of the content.
 
@@ -526,8 +527,8 @@
   <!--
     HTML Quotations
     HTML quotations allow you to include and format quoted text within your web content.
-    These quotation tags help maintain proper formatting and semantics, enhancing the presentation and meaning of quoted 
-    content on web pages. Incorporating quotes is essential for conveying information accurately and providing a 
+    These quotation tags help maintain proper formatting and semantics, enhancing the presentation and meaning of quoted
+    content on web pages. Incorporating quotes is essential for conveying information accurately and providing a
     well-organized reading experience for users.
 
     The following are the quotation elements that are used to insert and display quotations on the webpage:
@@ -727,38 +728,38 @@
 
   -->
   <h2>Using an image in HTML</h2>
-  <img src="../../assets/img/social_media.png" alt="social_media.png" >
+  <img src="../../assets/img/social-media.png" alt="social-media.png" >
   <br>
 
   <h2>Setting image Width and Height</h2>
-  <img src="../../assets/img/social_media.png" alt="social_media.png" width="628" height="628"/>
+  <img src="../../assets/img/social-media.png" alt="social-media.png" width="628" height="628"/>
   <br>
 
   <h2>Setting image Border</h2>
-  <img src="../../assets/img/social_media.png" alt="social_media.png" width="628" height="628" style="border: 3px;"/>
+  <img src="../../assets/img/social-media.png" alt="social-media.png" width="628" height="628" style="border: 3px;"/>
   <br>
 
   <h2>Setting image Alignment</h2>
   <p>Below is a right aligned image</p>
-  <img src="../../assets/img/social_media.png" alt="social_media.png"
-    width="628" height="628" style="border: 3px; float: right;"/><br>
+  <img src="../../assets/img/social-media.png" alt="social-media.png"
+       width="628" height="628" style="border: 3px; float: right;"/><br>
 
   <p>Below is a left aligned image</p>
-  <img src="../../assets/img/social_media.png" alt="social_media.png"
-    width="628" height="628" style="border: 3px; float: left;"/><br>
+  <img src="../../assets/img/social-media.png" alt="social-media.png"
+       width="628" height="628" style="border: 3px; float: left;"/><br>
 
   <p>Below is a center aligned image</p>
-  <img src="../../assets/img/social_media.png" alt="social_media.png"
-    width="628" height="628" style="border: 3px; margin: auto;"/><br>
+  <img src="../../assets/img/social-media.png" alt="social-media.png"
+       width="628" height="628" style="border: 3px; margin: auto;"/><br>
   <br>
 
   <h2>Using an animated image in HTML</h2>
-  <img src="https://www.tutorialspoint.com/html/images/animated_image.gif" alt="social_media.png" style="border: 3px;"/>
+  <img src="https://www.tutorialspoint.com/html/images/animated_image.gif" alt="social-media.png" style="border: 3px;"/>
   <br>
 
   <h2>Responsive Image Example</h2>
-  <img src="../../assets/img/social_media.png" alt="social_media.png"
-    width="628" height="628" style="border: 3px; width: 100%; height: auto;" />
+  <img src="../../assets/img/social-media.png" alt="social-media.png"
+       width="628" height="628" style="border: 3px; width: 100%; height: auto;" />
   <br><hr>
 
   <h1>Image Map</h1>
@@ -808,10 +809,10 @@
 
     To create an image map in HTML, follow these steps with a code example −
     - Prepare Your Image: Begin with the image you want to use as an image map.
-      For this example, we'll use an image file named kenya_major_towns.png.
+      For this example, we'll use an image file named kenya-major-towns.png.
       Use the usemap attribute in the <img> tag to link the image to the <map> tag by keeping its value to the name
       attribute of the <map>:
-      Syntax:   <img src="../../assets/img/kenya_major_towns.png" usemap="#image_map">
+      Syntax:   <img src="../../assets/img/kenya-major-towns.png" usemap="#image_map">
 
     - Define the Image Map: Use the <map> tag to define the image map and give it a unique name with the name attribute.
       Syntax:   <map name="image_map"></map>
@@ -829,8 +830,8 @@
     The below image is a map showing major towns in Kenya.
     Here the towns pins are clickable demonstrating how imagemap works
   </p>
-  <img src="../../assets/img/kenya_major_towns.png" alt="social_media.png"
-    width="500" height="595" usemap="#image_map"/>
+  <img src="../../assets/img/kenya-major-towns.png" alt="social-media.png"
+       width="500" height="595" usemap="#image_map"/>
   <map name="image_map">
     <area shape="circle" coords="204,369,5" href="https://www.nairobi.go.ke/" alt="nairobi town"/>
     <area shape="circle" coords="351,503,5" href="https://www.mombasa.go.ke/" alt="mombasa town"/>
@@ -1178,10 +1179,10 @@
 
   <h2>Using class Attribute through JavaScript</h2>
   <button class="interactive-button" onclick="showClasssContent()">Click To Show</button>
-  <p class="hidden_content" style="display: none;">This content can be seen after clicking the button.</p>
+  <p class="hidden-content" style="display: none;">This content can be seen after clicking the button.</p>
   <script>
     function showClasssContent() {
-      const element = document.getElementsByClassName('hidden_content')[0];
+      const element = document.getElementsByClassName('hidden-content')[0];
       element.style.display = element.style.display === 'none' ? 'block' : 'none';
     }
   </script>
@@ -1193,10 +1194,10 @@
 
   <h2>Using id Attribute through JavaScript</h2>
   <button id="interactive-button" onclick="showIDContent()">Click To Show</button>
-  <p id="hidden_content" style="display: none;">This content can be seen after clicking the button.</p>
+  <p id="hidden-content" style="display: none;">This content can be seen after clicking the button.</p>
   <script>
     function showIDContent() {
-      const element = document.getElementById('hidden_content');
+      const element = document.getElementById('hidden-content');
       element.style.display = element.style.display === 'none' ? 'block' : 'none';
     }
   </script>
